syntax = "proto3";
import "google/protobuf/wrappers.proto";
package emailModule;

service EmailService {
  rpc sendEmail(EmailDto) returns (google.protobuf.BoolValue) {};
}

message EmailDto {
  string to = 1;
  string subject = 2;
  string text = 3;
  string html = 4;
}